# basic-ray-tracer-rs

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  lib.rs  lighting.rs  material.rs  ray.rs  render.rs  shapes.rs  vector.rs
src/app/: main.rs
src/app/resources/: style.css
