[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/app/main.rs"
name = "ray-tracer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.3"
gtk = { version = "0.4.8", package = "gtk4", features = ["v4_8"]}
image = "0.24.5"
log = "0.4.17"
num = "0.4.0"
rayon = "1.6.1"
relm4 = "0.4.4"
relm4-components = "0.4.4"
relm4-macros = "0.4.4"
tracker = "0.2.0"
